# research-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
prompts/: system.md
src/research_agent/: cli.py  core.py  core.py.save  schema.py
tests/: test_schema.py
